[package]
name = "janitor-differ"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition.workspace = true
description = "Differ for the janitor"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"

[dependencies]
janitor = { version = "0.0.0", path = ".." }
clap = { optional = true, workspace = true }
env_logger = { optional = true, workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing = "0.1.40"
serde.workspace = true
shlex.workspace = true
patchkit = "0.2.1"

[dev-dependencies]
maplit = { workspace = true }

[features]
cli = ["dep:clap", "dep:env_logger"]

[[bin]]
name = "janitor-differ"
path = "src/main.rs"
required-features = ["cli"]
