[package]
name = "janitor-differ"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition.workspace = true
description = "Differ for the janitor"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"

[dependencies]
janitor = { path = ".." }
clap = { optional = true, workspace = true }
env_logger = { optional = true, workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
tracing = "0.1.41"
serde.workspace = true
shlex.workspace = true
patchkit = "0.2.1"
axum.workspace = true
sqlx.workspace = true
redis = { workspace = true, features = ["aio", "connection-manager", "tokio", "tokio-comp", "json"] }
tempfile.workspace = true
breezyshim = { workspace = true, features = ["sqlx"] }
nix = { version = "0.29.0", features = ["resource", "signal", "process"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
mime = "0.3.17"
accept-header = "0.2.3"
thiserror.workspace = true
pyo3.workspace = true

[dev-dependencies]
maplit = { workspace = true }
static_assertions = { workspace = true }
tower = "0.5"
async-trait = "0.1"
url = "2.5"
futures-util = "0.3"

[features]
cli = ["dep:clap", "dep:env_logger"]
default = ["cli"]

[[bin]]
name = "janitor-differ"
path = "src/main.rs"
required-features = ["cli"]
