[package]
name = "janitor-mail-filter"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition.workspace = true
description = "Mail filter for the janitor"
license = "Apache-2.0"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"

[dependencies]
isahc = "1"
serde_json = "1"
select = "0.6"
mailparse = "0.15"
async-std = "1"
log = "0.4"
clap = { workspace = true, optional = true, features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

[[bin]]
name="janitor-mail-filter"
required-features=["cmdline"]

[features]
default = ["cmdline"]
cmdline = ["dep:clap", "dep:reqwest"]
