[package]
name = "janitor-publish"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition = "2021"
description = "Publisher for the janitor"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"

[dependencies]
breezyshim.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
debian-changelog = "0.1.12"
janitor = { version = "0.0.0", path = ".." }
log.workspace = true
minijinja = { version = "2", features = ["loader"] }
pyo3.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
silver-platter.workspace = true
tokio = { workspace = true, features = ["full"] }
url.workspace = true

[dev-dependencies]
maplit = { workspace = true }
