[package]
name = "janitor-publish"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition.workspace = true
description = "Publisher for the janitor"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"

[dependencies]
axum = { workspace = true }
breezyshim = { workspace = true, features = ["sqlx"] }
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
debian-changelog = "0.2.0"
futures = "0.3"
janitor = { path = ".." }
log.workspace = true
minijinja = { version = "2", features = ["loader"] }
pyo3.workspace = true
redis = { workspace = true, features = ["tokio-comp", "json", "connection-manager"] }
rslock = { workspace = true, default-features = false, features = ["tokio-comp"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
silver-platter.workspace = true
tokio = { workspace = true, features = ["full"] }
url = { workspace = true, features = ["serde"] }
sqlx = { workspace = true, features = ["chrono"] }
maplit.workspace = true
prometheus = "0.14.0"

[dev-dependencies]
maplit = { workspace = true }
