[package]
name = "janitor-runner"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition.workspace = true
description = "Runner for the janitor"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"

[dependencies]
breezyshim.workspace = true
tokio = { workspace = true, features = ["full"] }
sqlx.workspace = true
sqlx-core.workspace = true
sqlx-postgres.workspace = true
redis = { workspace = true, features = ["aio", "tokio-comp"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
janitor = { version = "0.0.0", path = "..", default-features = false, features = ["debian"] }
async-trait = "0.1.82"
url.workspace = true
debversion = { workspace = true, optional = true, features = ["sqlx"] }
debian-control = { version = "0.1.28", optional = true }
log.workspace = true
silver-platter = { workspace = true, features = ["debian"] }
reqwest.workspace = true

[dev-dependencies]
maplit = { workspace = true }

[features]
default = ["debian"]
debian = ["janitor/debian", "dep:debversion", "dep:debian-control"]
