[package]
name = "janitor-runner"
version.workspace = true
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition.workspace = true
description = "Runner for the janitor"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"

[dependencies]
breezyshim = { workspace = true, features = ["sqlx"] }
tokio = { workspace = true, features = ["full"] }
sqlx.workspace = true
sqlx-core.workspace = true
sqlx-postgres.workspace = true
redis = { workspace = true, features = ["aio", "tokio-comp"] }
chrono = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
janitor = { path = "..", default-features = false, features = ["debian"] }
async-trait = "0.1.88"
url.workspace = true
debversion = { workspace = true, optional = true, features = ["sqlx"] }
debian-control = { version = "0.1.28", optional = true }
log.workspace = true
silver-platter = { workspace = true, features = ["debian"] }
reqwest.workspace = true
clap = { workspace = true, features = ["derive"], optional = true }
axum = { workspace = true, features = ["multipart"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde_with = { version = "3.9.0", features = ["chrono_0_4"] }
uuid = { version = "1.11.0", features = ["v4"] }
thiserror = "1.0"
base64 = "0.22"
prometheus = "0.13"
lazy_static = "1.4"
num_cpus = "1.16"
toml = "0.8"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
hostname = "0.4"

[dev-dependencies]
maplit = { workspace = true }

[features]
default = ["debian"]
debian = ["janitor/debian", "dep:debversion", "dep:debian-control"]
cli = ["dep:clap"]

[[bin]]
name = "janitor-runner"
path = "src/main.rs"
required-features = ["cli"]
