[package]
name = "janitor-site"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition.workspace = true
description = "Basic site for the janitor"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"

[dependencies]
buildlog-consultant = { version = "0.1.0", default-features = false }

# Web Framework
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
hyper = { version = "1.0" }

# Templates & Assets
tera = "1.19"
include_dir = "0.7"

# Authentication & Security
oauth2 = "4.4"
jsonwebtoken = "9.0"
cookie = "0.18"
axum-extra = { version = "0.10", features = ["cookie"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx = { workspace = true, features = ["postgres", "chrono", "uuid", "migrate", "macros", "runtime-tokio-native-tls"] }
thiserror = "2.0"

# API & Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-axum = "0.2"
validator = { version = "0.18", features = ["derive"] }

# Monitoring & Observability
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
metrics-prometheus = "0.7"
regex = "1.0"

# Redis & Pub/Sub
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }

# Time & Utils
chrono = { workspace = true, features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
url = { workspace = true }
urlencoding = "2.1"
time = { version = "0.3", features = ["macros"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"

# Cryptography for webhook signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Asset compression
flate2 = "1.0"

# Configuration
config = "0.14"
anyhow = "1.0"

# Janitor dependencies  
janitor = { path = ".." }

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tower-test = "0.4"
axum-test = "17.0"
serde_json = { workspace = true }
tempfile = "3.0"
wiremock = "0.6"

# Integration testing
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "redis"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "janitor-site"
path = "src/main.rs"
