[package]
name = "janitor-worker"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition.workspace = true
description = "Worker for the janitor"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"
default-run = "janitor-worker"

[dependencies]
url = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json", "multipart"] }
backoff = { version = "0.4", features = ["tokio"] }
serde_json = "1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"], optional = true }
pyo3 = { workspace = true, features = ["auto-initialize", "serde"], optional = true }
janitor = { path = ".." }
pyo3-log = { workspace = true, optional = true }
breezyshim.workspace = true
silver-platter = { workspace = true, features = ["debian"] }
debian-analyzer = { workspace = true, optional = true }
shlex = "1.3.0"
axum = "0.7.9"   # Depends on axum-core v0.4.5, which is the same for askama_axum
askama_axum = { version = "0.4.0", features = ["serde-json", "serde-yaml", "humansize", "urlencode", "markdown"] }
nix = { version = "0.29.0", features = ["fs"] }
percent-encoding = "2.3.1"
maplit = "1.0.2"
tempfile = "3.20.0"
prometheus = "0.14.0"
askama = "0.12.1"
gethostname = "1.0.2"
ognibuild = { workspace = true }
debversion = { workspace = true, optional = true }
debian-changelog = { workspace = true, optional = true }
tokio-util = "0.7.14"

[features]
default = ["debian", "cli"]
debian = ["dep:debversion", "dep:debian-analyzer", "dep:debian-changelog", "janitor/debian"]
cli = ["dep:clap", "dep:pyo3", "dep:pyo3-log"]

[dev-dependencies]
http-body-util = "0.1.3"
hyper = "1.6.0"
serial_test = "3.1.1"
tempfile = "3.20.0"
test-log = "0.2.17"
tower = { version = "0.5.2", features = ["util"] }

[[bin]]
name = "janitor-worker"
path = "src/bin/worker.rs"
required-features = ["cli"]

[[bin]]
name = "janitor-dist"
path = "src/bin/dist.rs"
required-features = ["cli"]
