[package]
name = "janitor-differ"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition = "2021"
description = "Differ for the janitor"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"

[dependencies]
janitor = { version = "0.0.0", path = "../.." }

[dev-dependencies]
maplit = { workspace = true }
