[package]
name = "janitor-runner"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition = "2021"
description = "Runner for the janitor"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
