[package]
name = "worker-py"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition = "2021"
description = "Worker for the janitor - python bindings"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3-asyncio = {version = ">=0.14", features=["tokio-runtime"]}
pyo3 = {version = ">=0.14", features=["extension-module", "serde"]}
janitor-worker = { path = "../worker" }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
pyo3-log = "0.8"
log = "0.4"
