[package]
name = "worker-py"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition = "2021"
description = "Worker for the janitor - python bindings"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = {workspace = true, features=["extension-module", "serde", "chrono"]}
pyo3-asyncio = { workspace = true, features=["tokio-runtime"] }
janitor-worker = { path = "../worker" }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
pyo3-log = { workspace = true }
log = "0.4"
chrono = { workspace = true, features = ["serde"] }
breezyshim.workspace = true
silver-platter = { workspace = true, features = ["debian"] }
